# pandas-bootstrap

./: .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  docs.yml  sync-closing-labels.yml  tests.yml
bootstrap/: __init__.py  bootstrap.py  datasets.py  extensions.py  index.html
datasets/: index.html
docs/: bootstrap.md  datasets.md  extensions.md  index.md
docs/examples/: correlation.md  groupby-input.md  linear-regression.md  parallelization.md  return-type.md
docs/overrides/partials/: comments.html
examples/correlation/: index.html
examples/groupby-input/: index.html
examples/linear-regression/: index.html
examples/parallelization/: index.html
examples/return-type/: index.html
extensions/: index.html
search/: search_index.json
tests/: conftest.py  test_bootstrap.py  test_datasets.py  test_extensions.py
