[tool.poetry]
name = "pandas-bootstrap"
version = "0.2.0"
description = "Bootstrapping with Pandas made easy"
authors = ["Will Dean <wd60622@gmail.com>"]
readme = "README.md"
packages = [
    {include = "bootstrap"}, 
    {include = "bootstrap/py.typed"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = ">=1.0.0"
joblib = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
ipython = "8.8.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
